Add resumable uploads