@@ -20,28 +20,40 @@
 package org.elasticsearch.repositories.gcs;
 
 import com.google.api.gax.retrying.RetrySettings;
+import com.google.cloud.BaseWriteChannel;
 import com.google.cloud.http.HttpTransportOptions;
 import com.google.cloud.storage.StorageOptions;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import org.apache.http.HttpStatus;
+import org.apache.lucene.util.ArrayUtil;
+import org.elasticsearch.cluster.metadata.IndexMetaData;
 import org.elasticsearch.cluster.metadata.RepositoryMetaData;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.SuppressForbidden;
+import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.bytes.BytesArray;
-import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.Streams;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.settings.MockSecureSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeUnit;
 import org.elasticsearch.common.unit.ByteSizeValue;
+import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.env.Environment;
+import org.elasticsearch.index.IndexSettings;
+import org.elasticsearch.index.MergePolicyConfig;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.repositories.blobstore.ESMockAPIBasedRepositoryIntegTestCase;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.RestUtils;
+import org.elasticsearch.test.BackgroundIndexer;
+import org.elasticsearch.test.InternalSettingsPlugin;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.threeten.bp.Duration;
 
 import java.io.BufferedInputStream;
@@ -72,6 +84,8 @@ import static org.elasticsearch.repositories.gcs.GoogleCloudStorageClientSetting
 import static org.elasticsearch.repositories.gcs.GoogleCloudStorageClientSettings.TOKEN_URI_SETTING;
 import static org.elasticsearch.repositories.gcs.GoogleCloudStorageRepository.BUCKET;
 import static org.elasticsearch.repositories.gcs.GoogleCloudStorageRepository.CLIENT_NAME;
+import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
+import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertHitCount;
 
 @SuppressForbidden(reason = "this test uses a HttpServer to emulate a Google Cloud Storage endpoint")
 public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRepositoryIntegTestCase {
@@ -94,7 +108,7 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Collections.singletonList(TestGoogleCloudStoragePlugin.class);
+        return List.of(TestGoogleCloudStoragePlugin.class, InternalSettingsPlugin.class);
     }
 
     @Override
@@ -167,8 +181,42 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
     }
 
     /**
-     * GoogleCloudStoragePlugin that allows to set low values for the client retry policy
+     * Test the snapshot and restore of an index which has large segments files (2Mb+).
+     *
+     * The value of 2Mb is chosen according to the default chunk size configured in Google SDK client
+     * (see {@link BaseWriteChannel} chunk size).
      */
+    public void testSnapshotWithLargeSegmentFiles() throws Exception {
+        final String repository = createRepository("repository", Settings.builder()
+            .put("compress", "false")
+            .put(GoogleCloudStorageRepository.CHUNK_SIZE.getKey(), GoogleCloudStorageRepository.CHUNK_SIZE.getDefault(Settings.EMPTY))
+            .build());
+
+        final String index = "index-no-merges";
+        createIndex(index, Settings.builder()
+            .put(IndexMetaData.SETTING_NUMBER_OF_SHARDS, 1)
+            .put(IndexMetaData.SETTING_NUMBER_OF_REPLICAS, 0)
+            .put(IndexSettings.INDEX_REFRESH_INTERVAL_SETTING.getKey(), TimeValue.MINUS_ONE)
+            .put(MergePolicyConfig.INDEX_MERGE_ENABLED, false)
+            .build());
+
+        final int nbDocs = 10_000;
+        try (BackgroundIndexer indexer = new BackgroundIndexer(index, "_doc", client(), nbDocs)) {
+            awaitBusy(() -> indexer.totalIndexedDocs() >= nbDocs);
+        }
+        flushAndRefresh(index);
+        assertHitCount(client().prepareSearch(index).setSize(0).setTrackTotalHits(true).get(), nbDocs);
+
+        assertSuccessfulSnapshot(client().admin().cluster().prepareCreateSnapshot(repository, "snapshot")
+            .setWaitForCompletion(true).setIndices(index));
+
+        assertAcked(client().admin().indices().prepareDelete(index));
+
+        assertSuccessfulRestore(client().admin().cluster().prepareRestoreSnapshot(repository, "snapshot").setWaitForCompletion(true));
+        ensureGreen(index);
+        assertHitCount(client().prepareSearch(index).setSize(0).setTrackTotalHits(true).get(), nbDocs);
+    }
+
     public static class TestGoogleCloudStoragePlugin extends GoogleCloudStoragePlugin {
 
         public TestGoogleCloudStoragePlugin(Settings settings) {
@@ -181,18 +229,42 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
                 @Override
                 StorageOptions createStorageOptions(final GoogleCloudStorageClientSettings clientSettings,
                                                     final HttpTransportOptions httpTransportOptions) {
-                    return super.createStorageOptions(clientSettings, httpTransportOptions)
-                        .toBuilder()
+                    StorageOptions options = super.createStorageOptions(clientSettings, httpTransportOptions);
+                    return options.toBuilder()
                         .setRetrySettings(RetrySettings.newBuilder()
-                            .setMaxAttempts(10)
+                            .setTotalTimeout(options.getRetrySettings().getTotalTimeout())
                             .setInitialRetryDelay(Duration.ofMillis(10L))
-                            .setRetryDelayMultiplier(2.0d)
+                            .setRetryDelayMultiplier(options.getRetrySettings().getRetryDelayMultiplier())
                             .setMaxRetryDelay(Duration.ofSeconds(1L))
-                            .setTotalTimeout(Duration.ofSeconds(30L))
+                            .setMaxAttempts(0)
+                            .setJittered(false)
+                            .setInitialRpcTimeout(options.getRetrySettings().getInitialRpcTimeout())
+                            .setRpcTimeoutMultiplier(options.getRetrySettings().getRpcTimeoutMultiplier())
+                            .setMaxRpcTimeout(options.getRetrySettings().getMaxRpcTimeout())
                             .build())
                         .build();
                 }
             };
+        }
+
+        @Override
+        public Map<String, Repository.Factory> getRepositories(Environment env, NamedXContentRegistry registry, ThreadPool threadPool) {
+            return Collections.singletonMap(GoogleCloudStorageRepository.TYPE,
+                metadata -> new GoogleCloudStorageRepository(metadata, registry, this.storageService, threadPool) {
+                    @Override
+                    protected GoogleCloudStorageBlobStore createBlobStore() {
+                        return new GoogleCloudStorageBlobStore("bucket", "test", storageService) {
+                            @Override
+                            boolean isLargeBlob(final long blobSize) {
+                                return randomBoolean();
+                            }
+
+                            @Override
+                            void assertLargeBlobUseMultipartUpload(long blobSize) {
+                            }
+                        };
+                    }
+                });
         }
     }
 
@@ -223,13 +295,11 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
 
     /**
      * Minimal HTTP handler that acts as a Google Cloud Storage compliant server
-     *
-     * Note: it does not support resumable uploads
      */
     @SuppressForbidden(reason = "this test uses a HttpServer to emulate a Google Cloud Storage endpoint")
     private static class InternalHttpHandler implements HttpHandler {
 
-        private final ConcurrentMap<String, BytesReference> blobs = new ConcurrentHashMap<>();
+        private final ConcurrentMap<String, BytesArray> blobs = new ConcurrentHashMap<>();
 
         @Override
         public void handle(final HttpExchange exchange) throws IOException {
@@ -240,13 +310,13 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
                     RestUtils.decodeQueryString(exchange.getRequestURI().getQuery(), 0, params);
                     final String prefix = params.get("prefix");
 
-                    final List<Map.Entry<String, BytesReference>> listOfBlobs = blobs.entrySet().stream()
+                    final List<Map.Entry<String, BytesArray>> listOfBlobs = blobs.entrySet().stream()
                         .filter(blob -> prefix == null || blob.getKey().startsWith(prefix)).collect(Collectors.toList());
 
                     final StringBuilder list = new StringBuilder();
                     list.append("{\"kind\":\"storage#objects\",\"items\":[");
-                    for (Iterator<Map.Entry<String, BytesReference>> it = listOfBlobs.iterator(); it.hasNext(); ) {
-                        Map.Entry<String, BytesReference> blob = it.next();
+                    for (Iterator<Map.Entry<String, BytesArray>> it = listOfBlobs.iterator(); it.hasNext(); ) {
+                        Map.Entry<String, BytesArray> blob = it.next();
                         list.append("{\"kind\":\"storage#object\",");
                         list.append("\"bucket\":\"bucket\",");
                         list.append("\"name\":\"").append(blob.getKey()).append("\",");
@@ -272,19 +342,24 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
                     exchange.getResponseBody().write(response);
 
                 } else if (Regex.simpleMatch("GET /download/storage/v1/b/bucket/o/*", request)) {
-                    BytesReference blob = blobs.get(exchange.getRequestURI().getPath().replace("/download/storage/v1/b/bucket/o/", ""));
+                    BytesArray blob = blobs.get(exchange.getRequestURI().getPath().replace("/download/storage/v1/b/bucket/o/", ""));
                     if (blob != null) {
+                        final String range = exchange.getRequestHeaders().getFirst("Range");
+                        Matcher matcher = Pattern.compile("bytes=([0-9]*)-([0-9]*)").matcher(range);
+                        assert matcher.find();
+
+                        byte[] response = Integer.parseInt(matcher.group(1)) == 0 ? blob.array() : new byte[0];
                         exchange.getResponseHeaders().add("Content-Type", "application/octet-stream");
-                        exchange.sendResponseHeaders(RestStatus.OK.getStatus(), blob.length());
-                        exchange.getResponseBody().write(blob.toBytesRef().bytes);
+                        exchange.sendResponseHeaders(RestStatus.OK.getStatus(), response.length);
+                        exchange.getResponseBody().write(response);
                     } else {
                         exchange.sendResponseHeaders(RestStatus.NOT_FOUND.getStatus(), -1);
                     }
 
                 } else if (Regex.simpleMatch("DELETE /storage/v1/b/bucket/o/*", request)) {
                     int deletions = 0;
-                    for (Iterator<Map.Entry<String, BytesReference>> iterator = blobs.entrySet().iterator(); iterator.hasNext(); ) {
-                        Map.Entry<String, BytesReference> blob = iterator.next();
+                    for (Iterator<Map.Entry<String, BytesArray>> iterator = blobs.entrySet().iterator(); iterator.hasNext(); ) {
+                        Map.Entry<String, BytesArray> blob = iterator.next();
                         if (blob.getKey().equals(exchange.getRequestURI().toString())) {
                             iterator.remove();
                             deletions++;
@@ -313,66 +388,138 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
                     exchange.sendResponseHeaders(RestStatus.OK.getStatus(), response.length);
                     exchange.getResponseBody().write(response);
 
-                } else if (Regex.simpleMatch("POST /upload/storage/v1/b/bucket/*uploadType=multipart*", request)) {
-                    byte[] response = new byte[0];
-                    try (BufferedInputStream in = new BufferedInputStream(new GZIPInputStream(exchange.getRequestBody()))) {
-                        String blob = null;
-                        int read;
-                        while ((read = in.read()) != -1) {
-                            boolean markAndContinue = false;
-                            try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-                                do { // search next consecutive {carriage return, new line} chars and stop
-                                    if ((char) read == '\r') {
-                                        int next = in.read();
-                                        if (next != -1) {
-                                            if (next == '\n') {
-                                                break;
+                } else if (Regex.simpleMatch("POST /upload/storage/v1/b/bucket/*uploadType=*", request)) {
+                    final Map<String, String> params = new HashMap<>();
+                    RestUtils.decodeQueryString(exchange.getRequestURI().getQuery(), 0, params);
+                    final String uploadType = params.get("uploadType");
+
+                    if (uploadType.equals("resumable")) {
+                        final String blobName = params.get("name");
+                        blobs.put(blobName, BytesArray.EMPTY);
+
+                        byte[] response = Streams.readFully(exchange.getRequestBody()).utf8ToString().getBytes(UTF_8);
+                        exchange.getResponseHeaders().add("Content-Type", "application/json");
+                        exchange.getResponseHeaders().add("Location", httpServerUrl() + "/upload/storage/v1/b/bucket/o?"
+                            + "uploadType=" + uploadType
+                            + "&upload_id=" + UUIDs.randomBase64UUID()
+                            + "&test_blob_name=" + blobName); // not a Google Storage parameter, but it allows to pass the blob name
+                        exchange.sendResponseHeaders(RestStatus.OK.getStatus(), response.length);
+                        exchange.getResponseBody().write(response);
+
+                    } else if (uploadType.equals("multipart")) {
+                        try (BufferedInputStream in = new BufferedInputStream(new GZIPInputStream(exchange.getRequestBody()))) {
+                            byte[] response = new byte[0];
+                            String blob = null;
+                            int read;
+                            while ((read = in.read()) != -1) {
+                                boolean markAndContinue = false;
+                                try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+                                    do { // search next consecutive {carriage return, new line} chars and stop
+                                        if ((char) read == '\r') {
+                                            int next = in.read();
+                                            if (next != -1) {
+                                                if (next == '\n') {
+                                                    break;
+                                                }
+                                                out.write(read);
+                                                out.write(next);
+                                                continue;
                                             }
-                                            out.write(read);
-                                            out.write(next);
-                                            continue;
+                                        }
+                                        out.write(read);
+                                    } while ((read = in.read()) != -1);
+
+                                    final String line = new String(out.toByteArray(), UTF_8);
+                                    if (line.length() == 0 || line.equals("\r\n") || line.startsWith("--")
+                                        || line.toLowerCase(Locale.ROOT).startsWith("content")) {
+                                        markAndContinue = true;
+                                    } else if (line.startsWith("{\"bucket\":\"bucket\"")) {
+                                        markAndContinue = true;
+                                        Matcher matcher = Pattern.compile("\"name\":\"([^\"]*)\"").matcher(line);
+                                        if (matcher.find()) {
+                                            blob = matcher.group(1);
+                                            response = line.getBytes(UTF_8);
                                         }
                                     }
-                                    out.write(read);
-                                } while ((read = in.read()) != -1);
+                                    if (markAndContinue) {
+                                        in.mark(Integer.MAX_VALUE);
+                                        continue;
+                                    }
+                                }
+                                if (blob != null) {
+                                    in.reset();
+                                    try (ByteArrayOutputStream binary = new ByteArrayOutputStream()) {
+                                        while ((read = in.read()) != -1) {
+                                            binary.write(read);
+                                        }
+                                        binary.flush();
+                                        byte[] tmp = binary.toByteArray();
+                                        // removes the trailing end "\r\n--__END_OF_PART__--\r\n" which is 23 bytes long
+                                        blobs.put(blob, new BytesArray(Arrays.copyOf(tmp, tmp.length - 23)));
 
-                                final String line = new String(out.toByteArray(), UTF_8);
-                                if (line.length() == 0 || line.equals("\r\n") || line.startsWith("--")
-                                    || line.toLowerCase(Locale.ROOT).startsWith("content")) {
-                                    markAndContinue = true;
-                                } else if (line.startsWith("{\"bucket\":\"bucket\"")) {
-                                    markAndContinue = true;
-                                    Matcher matcher = Pattern.compile("\"name\":\"([^\"]*)\"").matcher(line);
-                                    if (matcher.find()) {
-                                        blob = matcher.group(1);
-                                        response = line.getBytes(UTF_8);
+                                        exchange.getResponseHeaders().add("Content-Type", "application/json");
+                                        exchange.sendResponseHeaders(RestStatus.OK.getStatus(), response.length);
+                                        exchange.getResponseBody().write(response);
+
+                                    } finally {
+                                        blob = null;
                                     }
-                                }
-                                if (markAndContinue) {
-                                    in.mark(Integer.MAX_VALUE);
-                                    continue;
-                                }
-                            }
-                            if (blob != null) {
-                                in.reset();
-                                try (ByteArrayOutputStream binary = new ByteArrayOutputStream()) {
-                                    while ((read = in.read()) != -1) {
-                                        binary.write(read);
-                                    }
-                                    binary.flush();
-                                    byte[] tmp = binary.toByteArray();
-                                    // removes the trailing end "\r\n--__END_OF_PART__--\r\n" which is 23 bytes long
-                                    blobs.put(blob, new BytesArray(Arrays.copyOf(tmp, tmp.length - 23)));
-                                } finally {
-                                    blob = null;
                                 }
                             }
                         }
                     }
-                    exchange.getResponseHeaders().add("Content-Type", "application/json");
-                    exchange.sendResponseHeaders(RestStatus.OK.getStatus(), response.length);
-                    exchange.getResponseBody().write(response);
 
+                } else if (Regex.simpleMatch("PUT /upload/storage/v1/b/bucket/o?uploadType=resumable*", request)) {
+                    final Map<String, String> params = new HashMap<>();
+                    RestUtils.decodeQueryString(exchange.getRequestURI().getQuery(), 0, params);
+
+                    final String blobName = params.get("test_blob_name");
+                    final String range = exchange.getRequestHeaders().getFirst("Content-Range");
+                    if (Strings.hasLength(range)) {
+                        // resumable in multiple chunks
+                        Matcher matcher = Pattern.compile("bytes ([^/]*)/([0-9\\*]*)").matcher(range);
+                        if (matcher.find()) {
+                            String bytes = matcher.group(1);
+                            String limit = matcher.group(2);
+                            byte[] blob = blobs.get(blobName).array();
+                            assert blob != null;
+                            // client is uploading a chunk
+                            matcher = Pattern.compile("([0-9]*)-([0-9]*)").matcher(bytes);
+                            assert matcher.find();
+
+                            int end = Integer.parseInt(matcher.group(2));
+                            int start = Integer.parseInt(matcher.group(1));
+
+                            final ByteArrayOutputStream out = new ByteArrayOutputStream();
+                            long count = Streams.copy(exchange.getRequestBody(), out);
+                            int length = Math.max(end + 1, "*".equals(limit) ? 0 : Integer.parseInt(limit));
+                            assert count <= length;
+                            if (length > blob.length) {
+                                blob = ArrayUtil.growExact(blob, length);
+                            }
+                            assert blob.length >= end;
+                            System.arraycopy(out.toByteArray(), 0, blob, start, Math.toIntExact(count));
+                            blobs.put(blobName, new BytesArray(blob));
+
+                            if ("*".equals(limit)) {
+                                exchange.getResponseHeaders().add("Range", String.format(Locale.ROOT, "bytes=%d/%d", start, end));
+                                exchange.getResponseHeaders().add("Content-Length", "0");
+                                exchange.sendResponseHeaders(308 /* Resume Incomplete */, -1);
+                            } else {
+                                assert blob.length == Integer.parseInt(limit);
+                                exchange.sendResponseHeaders(RestStatus.OK.getStatus(), -1);
+                            }
+                        } else {
+                            exchange.sendResponseHeaders(RestStatus.INTERNAL_SERVER_ERROR.getStatus(), -1);
+                        }
+                    } else {
+                        // resumable in a single request
+                        try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+                            Streams.copy(exchange.getRequestBody(), out);
+                            blobs.put(blobName, new BytesArray(out.toByteArray()));
+                            exchange.sendResponseHeaders(RestStatus.OK.getStatus(), -1L);
+                        }
+                    }
                 } else {
                     exchange.sendResponseHeaders(RestStatus.INTERNAL_SERVER_ERROR.getStatus(), -1);
                 }
@@ -409,9 +556,11 @@ public class GoogleCloudStorageBlobStoreRepositoryTests extends ESMockAPIBasedRe
 
         @Override
         protected String requestUniqueId(HttpExchange exchange) {
+            final String range = exchange.getRequestHeaders().getFirst("Content-Range");
             return exchange.getRemoteAddress().toString()
                 + " " + exchange.getRequestMethod()
-                + " " + exchange.getRequestURI();
+                + " " + exchange.getRequestURI()
+                + (range != null ?  " " + range :  "");
         }
 
         @Override
